--- a/CaseBites/Pages/map.html
+++ b/CaseBites/Pages/map.html
@@ -1,18 +1,60 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CaseBites Map Viewer</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+import React, { useState } from 'react'
+import { GoogleMap, LoadScript, MarkerF, InfoWindow} from '@react-google-maps/api';
+import * as restaurantData from "./restaurants-data.json";
 
-<body>
-<figure class="text-center">
-<p class="h1">Case Bites</p>
+const containerStyle = {
+  width: '100vw',
+  height: '100vh'
+};
 
-<a href="main.html" class="link-primary">Back to Main Page</a>
-</figure>
+const center = {
+  lat: 41.507213,
+  lng: -81.606955
+};
 
-</body>
-</html>
+function MyComponent() {
+  const [selectedRestaurant, setSelectedRestaurant] = useState(null);
+  return (
+    <LoadScript
+      googleMapsApiKey="AIzaSyB2zN4XibhG6DPOVT9Xy_smKHsgNEXMwGY"
+    >
+      <GoogleMap
+        mapContainerStyle={containerStyle}
+        center={center}
+        zoom={15}
+      >
+        { /* Child components, such as markers, info windows, etc. */
+          {restaurantData.features.map((restuarant => (
+            <MarkerF 
+              key={restuarant.name} 
+              position={{
+                lat: restuarant.coordinates[0], 
+                lng: restuarant.coordinates[1]
+              }}
+              onClick={() => {
+                setSelectedRestaurant(restaurant);
+              }}
+            /> 
+          ))}
+
+          {selectedRestaurant && (
+            <InfoWindow
+              position={{
+                lat: restuarant.coordinates[0], 
+                lng: restuarant.coordinates[1]
+              }} 
+              onCloseClick{() => {
+                setSelectedRestaurant(null);
+              }}
+            >
+              <div>Restaurant Information</div>
+            </InfoWindow>
+          )}
+        }
+      </GoogleMap>
+    </LoadScript>
+  )
+}
+
+export default React.memo(MyComponent)
+
