--- a/CaseBites/Pages/map.html
+++ b/CaseBites/Pages/map.html
@@ -1,60 +1,32 @@
-import React, { useState } from 'react'
-import { GoogleMap, LoadScript, MarkerF, InfoWindow} from '@react-google-maps/api';
-//import * as restaurantData from "./restaurants-data.json";
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width,
+        initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>My Google Maps</title>
+        <style>
+            #map{
+                height:800px;
+                width:100%;
+            }
+        </style>
+    </head>
+    <div id="map"></div>
+    <script>
+        function initMap(){
+            var options = {
+                zoom:14,
+                center: {lat:41.507213,lng:-81.606955}
+            }
 
-const containerStyle = {
-  width: '100vw',
-  height: '100vh'
-};
-
-const center = {
-  lat: 41.507213,
-  lng: -81.606955
-};
-
-function MyComponent() {
-  const [selectedRestaurant, setSelectedRestaurant] = useState(null);
-  return (
-    <LoadScript
-      googleMapsApiKey="AIzaSyB2zN4XibhG6DPOVT9Xy_smKHsgNEXMwGY"
-    >
-      <GoogleMap
-        mapContainerStyle={containerStyle}
-        center={center}
-        zoom={15}
-      >
-        { /* Child components, such as markers, info windows, etc. 
-          {restaurantData.features.map((restuarant => (
-            <MarkerF 
-              key={restuarant.name} 
-              position={{
-                lat: restuarant.coordinates[0], 
-                lng: restuarant.coordinates[1]
-              }}
-              onClick={() => {
-                setSelectedRestaurant(restaurant);
-              }}
-            /> 
-          ))}
-
-          {selectedRestaurant && (
-            <InfoWindow
-              position={{
-                lat: restuarant.coordinates[0], 
-                lng: restuarant.coordinates[1]
-              }} 
-              onCloseClick{() => {
-                setSelectedRestaurant(null);
-              }}
-            >
-              <div>Restaurant Information</div>
-            </InfoWindow>
-          )}*/
-        } 
-      </GoogleMap>
-    </LoadScript>
-  )
-}
-
-export default React.memo(MyComponent)
-
+            var map = new google.maps.Map(document.getElementById('map'), options);
+        }
+    </script>
+  
+    <script async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2zN4XibhG6DPOVT9Xy_smKHsgNEXMwGY&callback=initMap">
+    </script>
+  </body>
+</html>
